vault-secret/vault-secret/vault-secret-main/vault-postgreSQL/templates/vault-injector .yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-agent-injector
  namespace: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault-agent-injector
  template:
    metadata:
      labels:
        app: vault-agent-injector
    spec:
      containers:
        - name: injector
          image: hashicorp/vault:1.19.2
          imagePullPolicy: Always
          securityContext:
            runAsUser: 65534
            runAsGroup: 65534
            fsGroup: 65534
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      serviceAccountName: vault-auth  # The service account that Vault uses to authenticate with Kubernetes
